--- a/.gitignore
+++ b/.gitignore
@@ -41,3 +41,14 @@ $RECYCLE.BIN/
 # Linux trash folder which might appear on any partition or disk
 .Trash-*
 .desktop
+
+obj
+obj/*
+
+bin
+bin/*
+.vs
+.vs/*
+
+.git
+.git/*
