--- a/template.yaml
+++ b/template.yaml
@@ -3,11 +3,11 @@ description: This is an scaffold rest api based in microservices
 types:
   - app-template
 inputs:
-
   - label: Project name
     type: text
     name: project_name
     default: project-name
+    global: true
 
   - label: Select the dotnet version
     type: text
@@ -15,14 +15,14 @@ inputs:
     items:
       - "net6.0"
       - "net5.0"
-      
+
   - label: Select the dotnet build version
     type: text
     name: project_dotnet_build_version
     items:
       - "6.0.402"
       - "5.0.408"
-      
+
   - label: Select csharp version
     type: text
     name: project_csharp_version
@@ -31,19 +31,31 @@ inputs:
       - "9.0"
 
 global-computed-inputs:
-  project_type: "Api"  
-  source_path: "src"
-  
+  project_type: "Api"
+  source_path: ""
+  source_path_src: "src"
+  version: "CleanArchitectureTemplate"
+
 hooks:
-  
+#building tamplate source code
   - type: run
     trigger: after-render
-    windows:      
-      - dotnet restore {{global_computed_inputs.source_path}}
-      - dotnet build {{global_computed_inputs.source_path}} -c Release -p:Version=6.0.402 --no-restore      
-      - dotnet new install {{global_computed_inputs.source_path}}/. --force
-      - dotnet new CleanArchitectureTemplate -n {{inputs.project_name}} -o '{{target_path | replace('\\','\/')}}' --skipRestore true --force  
-     
+    windows:
+      - dotnet restore {{global_computed_inputs.source_path_src}}
+      - dotnet build {{global_computed_inputs.source_path_src}} -c Release --no-restore
+#Installing template into dotnet new gallery option
+  - type: run
+    trigger: after-render
+    windows:  
+      - dotnet new install {{global_computed_inputs.source_path_src}}/. --force
+      - dotnet new {{global_computed_inputs.version}} -n {{global_inputs.project_name}} -o '{{target_path | replace('\\','\/')}}' --skipRestore true --force
+      - dotnet new tool-manifest
+      - dotnet tool install --local dotnet-format
+#remove src folder that is copy into generated app
+  - type: run-script
+    trigger: after-render
+    script: scripts/remove-folder.py
+
 displayName: Rest Api - Template
 
 category: Backend, Api, Rest Api
@@ -52,10 +64,8 @@ compatibility:
   - net6.0
   - net5.0
 
-technologies: 
+technologies:
   - .NET
   - C#
   - Docker
-  - Observability
-  - OpenTelemetry
   - CQRS
